# expense-tracker

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: config.py  main.py
backend/app/models/: __init__.py  account.py  budget.py  card.py  category.py  expense.py  statement.py  user.py
backend/app/services/: ai_service.py  audio_service.py  budget_service.py  expense_service.py  reconciliation_service.py  split_service.py
backend/bot/: keyboards.py  main.py
backend/bot/handlers/: accounts.py  budget.py  expense.py  help.py  report.py  splits.py  start.py  statement.py
backend/tests/: conftest.py
